Cleaned controllers logs
